# radiomesh

./: CHANGELOG.rst  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  test.yaml
radiomesh/: _stokes_expr.py  constants.py  core.py  errors.py  es_kernel.py  es_kernel_structref.py  fft_wrappers.py  gridding.py  gridding_types.py  intrinsics.py  jones_intrinsics.py  literals.py  numba_utils.py  parameters.py  product.py  stokes.py  stokes_intrinsics.py  ufunc_minimal.py  utils.py
radiomesh/concurrency/: mutex.py
radiomesh/scripts/: gen_expr.py  gen_kernel_params.py  main.py
radiomesh/tests/: cmp_vs_ducc.py  conftest.py  proc_utils.py  test_benchmark_es_kernel.py  test_compound_literal.py  test_core.py  test_es_kernel.py  test_es_kernel_structref.py  test_float_literal.py  test_gridding_types.py  test_intrinsics.py  test_literals.py  test_parameters.py  test_pointers.py  test_polynomial_kernel.py  test_product.py  test_stokes_intrinsics.py  test_ufunc.py  test_uvw.py  test_wgrid.py  test_wgridder.py
