[project]
name = "radiomesh"
version = "0.1.0"
description = "Just a basic numba gridder"
authors = [
    {name = "landmanbester", email = "lbester@sarao.ac.za"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
    "sympy>=1.9",
    "scipy",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
