[project]
name = "radiomesh"
version = "0.1.1"
description = "Just a basic numba gridder"
authors = [
    {name = "Landman Bester", email = "lbester@sarao.ac.za"},
    {name = "Simon Perkins", email = "sperkins@sarao.ac.za"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
    "sympy>=1.9",
    "scipy",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.1",
]
dev = [
    "pre-commit>=4.2.0",
    "tbump>=6.11.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
extend-select = ["I"]


[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/landmanbester/radiomesh/"

[tool.tbump.version]
current = "0.1.1"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
